[build-system]
requires = ["setuptools", "cython", ]
build-backend = "setuptools.build_meta"

[project]
name = "xpra"
version = "6.0"
authors = [
    {name = "Antoine Martin", email = "antoine@xpra.org"},
]
description = "multi-platform screen and application forwarding system"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "GPL2+"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gobject-introspection",
]


[tool.ruff]
line-length = 120
ignore = ["E741"]


[tool.flake8]
max-line-length = 120
ignore = ["E203", "E231", "E225", "E226", "E252", "E221", "E741", ]
per-file-ignores = "xpra/audio/gstreamer_util.py:E241 xpra/keyboard/layouts.py:E241,E501 xpra/x11/gtk_x11/wm_check.py:E241 xpra/x11/server/seamless.py:E241"
